--- a/index.html
+++ b/index.html
@@ -17,10 +17,35 @@
       <symbol viewBox="0 0 25 24" id="search">
         <g clip-path="url(#clip0_2_315)">
           <path d="M24.66 20.7495L19.7915 16.0766C19.5717 15.8656 19.2739 15.7485 18.9613 15.7485H18.1654C19.5131 14.0939 20.314 12.0129 20.314 9.74905C20.314 4.36364 15.7678 0 10.157 0C4.54623 0 0 4.36364 0 9.74905C0 15.1345 4.54623 19.4981 10.157 19.4981C12.5156 19.4981 14.6837 18.7294 16.4074 17.4358V18.1998C16.4074 18.4998 16.5295 18.7857 16.7493 18.9966L21.6178 23.6696C22.0768 24.1101 22.8191 24.1101 23.2732 23.6696L24.6551 22.3431C25.1141 21.9025 25.1141 21.1901 24.66 20.7495ZM10.157 15.7485C6.70459 15.7485 3.90654 13.0675 3.90654 9.74905C3.90654 6.43531 6.69971 3.74963 10.157 3.74963C13.6094 3.74963 16.4074 6.43062 16.4074 9.74905C16.4074 13.0628 13.6143 15.7485 10.157 15.7485Z" />
-          </g>  
+        </g>  
     </symbol>
 
     </svg> 
+    <svg display="none">
+      <symbol viewBox="0 0 24 24" id="facebook">
+        <g clip-path="url(#clip0_2_315)">
+          <path d="M24 12.073C24 5.40365 18.629 0 12 0C5.37097 0 0 5.40365 0 12.073C0 18.0988 4.38823 23.0935 10.125 24V15.563H7.07661V12.073H10.125V9.41306C10.125 6.38751 11.9153 4.71627 14.6574 4.71627C15.9706 4.71627 17.3439 4.95189 17.3439 4.95189V7.92146H15.8303C14.34 7.92146 13.875 8.85225 13.875 9.8069V12.073H17.2031L16.6708 15.563H13.875V24C19.6118 23.0935 24 18.0988 24 12.073Z" />
+        </g>  
+    </symbol>
+
+    </svg> 
+    <svg display="none">
+      <symbol viewBox="0 0 22 22" id="instagram">
+        <g clip-path="url(#clip0_2_315)">
+          <path d="M10.946 5.36581C7.84058 5.36581 5.33569 7.87647 5.33569 10.9891C5.33569 14.1017 7.84058 16.6124 10.946 16.6124C14.0515 16.6124 16.5564 14.1017 16.5564 10.9891C16.5564 7.87647 14.0515 5.36581 10.946 5.36581ZM10.946 14.645C8.93921 14.645 7.29858 13.0055 7.29858 10.9891C7.29858 8.97274 8.93433 7.33322 10.946 7.33322C12.9578 7.33322 14.5935 8.97274 14.5935 10.9891C14.5935 13.0055 12.9529 14.645 10.946 14.645ZM18.0945 5.13579C18.0945 5.865 17.5085 6.4474 16.7859 6.4474C16.0584 6.4474 15.4773 5.86011 15.4773 5.13579C15.4773 4.41146 16.0632 3.82417 16.7859 3.82417C17.5085 3.82417 18.0945 4.41146 18.0945 5.13579ZM21.8103 6.46697C21.7273 4.71 21.3269 3.15369 20.0427 1.87144C18.7634 0.589194 17.2107 0.18788 15.4578 0.0997867C13.6511 -0.0029888 8.23608 -0.0029888 6.42944 0.0997867C4.6814 0.182986 3.12866 0.5843 1.84448 1.86655C0.560303 3.14879 0.164795 4.70511 0.0769043 6.46208C-0.0256348 8.27289 -0.0256348 13.7004 0.0769043 15.5112C0.159912 17.2682 0.560303 18.8245 1.84448 20.1068C3.12866 21.389 4.67651 21.7903 6.42944 21.8784C8.23608 21.9812 13.6511 21.9812 15.4578 21.8784C17.2107 21.7952 18.7634 21.3939 20.0427 20.1068C21.322 18.8245 21.7224 17.2682 21.8103 15.5112C21.9128 13.7004 21.9128 8.27778 21.8103 6.46697ZM19.4763 17.4542C19.0955 18.4134 18.3582 19.1524 17.3962 19.539C15.9558 20.1116 12.5378 19.9795 10.946 19.9795C9.35425 19.9795 5.9314 20.1068 4.49585 19.539C3.53882 19.1573 2.80151 18.4183 2.41577 17.4542C1.84448 16.0104 1.97632 12.5846 1.97632 10.9891C1.97632 9.39363 1.84937 5.96288 2.41577 4.52403C2.79663 3.56479 3.53394 2.82578 4.49585 2.43915C5.93628 1.86655 9.35425 1.99869 10.946 1.99869C12.5378 1.99869 15.9607 1.87144 17.3962 2.43915C18.3533 2.82089 19.0906 3.5599 19.4763 4.52403C20.0476 5.96778 19.9158 9.39363 19.9158 10.9891C19.9158 12.5846 20.0476 16.0153 19.4763 17.4542Z" />
+        </g>  
+    </symbol>
+
+    </svg> 
+    <svg display="none">
+      <symbol  viewBox="0 0 25 20" id="twitter">
+        <g clip-path="url(#clip0_2_315)">
+          <path d="M22.4303 4.98436C22.4461 5.2031 22.4461 5.42188 22.4461 5.64062C22.4461 12.3125 17.2907 20 7.86805 20C4.96511 20 2.26842 19.1718 0 17.7344C0.412453 17.7812 0.808988 17.7969 1.23731 17.7969C3.63258 17.7969 5.83757 17 7.59837 15.6406C5.34582 15.5938 3.45812 14.1406 2.80773 12.1406C3.12501 12.1875 3.44225 12.2187 3.77541 12.2187C4.23542 12.2187 4.69548 12.1562 5.12375 12.0469C2.77604 11.5781 1.01519 9.54687 1.01519 7.09374V7.03126C1.69727 7.40627 2.49049 7.64064 3.33117 7.67185C1.95108 6.76558 1.04693 5.21873 1.04693 3.46871C1.04693 2.53123 1.30069 1.67186 1.74488 0.921852C4.26711 3.98435 8.05838 5.98432 12.3096 6.2031C12.2303 5.8281 12.1827 5.43752 12.1827 5.04688C12.1827 2.2656 14.467 0 17.3065 0C18.7817 0 20.1142 0.609373 21.0501 1.59375C22.2081 1.37501 23.3185 0.953114 24.302 0.375003C23.9213 1.5469 23.1123 2.53128 22.0495 3.15624C23.0806 3.04691 24.08 2.7656 25 2.37502C24.3021 3.37498 23.4296 4.26557 22.4303 4.98436Z"/>
+        </g>  
+    </symbol>
+    </svg> 
+
+    <!-- main -->
 
     <div class="header">
       <div class="nav">
@@ -37,7 +62,7 @@
          </div>
         </div>
       </div>
-
+<!-- intro -->
       <div class="intro">
         <div class="container">
           <div class="intro_inner">
@@ -46,6 +71,89 @@
               <h3 class="intro_title">Best Solution For Your Home</h3>
               <p class="intro_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!-- OurServices -->
+    <div class="OurServices">
+      <div class="container">
+        <div class="OurServices_inner">
+          <div class="OurServices_object">
+            <h2 class="OurService_title">Our Services</h2>
+          </div>
+          <div class="OurServices_object">
+            <div class="OurServices_item">
+              <img src="/img/ourservices_img_1.png" alt="item">
+              <h3>Planning</h3>
+              <p>Our Services Line one Servive line two</p>
+            </div>
+            <div class="OurServices_item">
+              <img src="/img/ourservices_img_2.png" alt="item">
+              <h3>Interior</h3>
+              <p>Our Services Line one Servive line two</p>
+            </div>
+            <div class="OurServices_item">
+              <img src="/img/ourservices_img_3.png" alt="item">
+              <h3>Exterior</h3>
+              <p>Our Services Line one Servive line two</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+<!-- AboutUS -->
+    <div class="AboutUS">
+      <div class="container">
+        <div class="AboutUs_inner">
+          <div class="AboutUs_group"><img src="img/AboutUs_img.png" alt=""></div>
+          <div class="AboutUs_group">
+            <h3>About Us</h3>
+            <p>Lorem ipsum dolor sit amet, 
+              consectetur adipiscing elit ut 
+              aliquam, purus sit amet luctus 
+              venenatis, lectus magna fringilla 
+              urna, porttitor</p>
+              <a href="#">Read more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Testimonial -->
+    <div class="Testimonial">
+      <div class="Testimonial_group">
+          <h3>Testimonial</h3>
+      </div>
+      <div class="Testimonial_group">
+        <div class="Testimonial_item">
+          <img src="img/Testimonial_img_1.png" alt="man" class="Testimonial_img">
+          <div class="Testimonial_item_content">
+            <div class="Testimonial_title">James Passaquindici Arcand</div>
+            <div class="Testimonial_subtitle">Lorem ipsum dolor sit amet, 
+              consectetur adipiscing elit ut 
+              aliquam, purus sit amet luctus venenatis</div>
+          </div>
+        </div>
+        <div class="Testimonial_item">
+          <img src="img/Testimonial_img_2.png" alt="man" class="Testimonial_img">
+          <div class="Testimonial_item_content">
+            <div class="Testimonial_title">Abram Schleifer</div>
+            <div class="Testimonial_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut 
+              aliquam, purus sit amet luctus venenatis</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+      <div class="container">
+        <div class="footer_inner">
+          <div class="social_group">
+            <a href="" class="social_item"><svg>  <use xlink:href="#facebook"></use> </svg></a>
+            <a href="" class="social_item"><svg>  <use xlink:href="#instagram"></use> </svg></a>
+            <a href="" class="social_item"><svg>  <use xlink:href="#twitter"></use> </svg></a>
           </div>
         </div>
       </div>
