--- a/index.html
+++ b/index.html
@@ -123,28 +123,30 @@
 
     <!-- Testimonial -->
     <div class="Testimonial">
-      <div class="Testimonial_group">
-          <h3>Testimonial</h3>
-      </div>
-      <div class="Testimonial_group">
-        <div class="Testimonial_item">
-          <img src="img/Testimonial_img_1.png" alt="man" class="Testimonial_img">
-          <div class="Testimonial_item_content">
-            <div class="Testimonial_title">James Passaquindici Arcand</div>
-            <div class="Testimonial_subtitle">Lorem ipsum dolor sit amet, 
-              consectetur adipiscing elit ut 
-              aliquam, purus sit amet luctus venenatis</div>
+      <div class="container">
+        <div class="Testimonial_group">
+            <h3>Testimonial</h3>
+        </div>
+        <div class="Testimonial_group">
+          <div class="Testimonial_item">
+            <img src="img/Testimonial_img_1.png" alt="man" class="Testimonial_img">
+            <div class="Testimonial_item_content">
+              <div class="Testimonial_title">James Passaquindici Arcand</div>
+              <div class="Testimonial_subtitle">Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit ut 
+                aliquam, purus sit amet luctus venenatis</div>
+            </div>
+          </div>
+          <div class="Testimonial_item">
+            <img src="img/Testimonial_img_2.png" alt="man" class="Testimonial_img">
+            <div class="Testimonial_item_content">
+              <div class="Testimonial_title">Abram Schleifer</div>
+              <div class="Testimonial_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut 
+                aliquam, purus sit amet luctus venenatis</div>
+            </div>
           </div>
         </div>
-        <div class="Testimonial_item">
-          <img src="img/Testimonial_img_2.png" alt="man" class="Testimonial_img">
-          <div class="Testimonial_item_content">
-            <div class="Testimonial_title">Abram Schleifer</div>
-            <div class="Testimonial_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut 
-              aliquam, purus sit amet luctus venenatis</div>
-          </div>
-        </div>
-      </div>
+    </div>
     </div>
     <!-- footer -->
     <div class="footer">
